*x2-1.1.0 (24 Aug 2012)

  24 Aug 2012; Manuel Rüger (mrueg) gentoo@rueg.eu
  +files/x2-1.1.0-Makefile.patch, +files/x2-1.1.0-desktop.patch, +metadata.xml,
  +x2-1.1.0.ebuild:
  app-editors/x2: Respect CC, fix .desktop file