@@ -1,6 +1,6 @@
-AUX x2-1.1.0-Makefile.patch 501 SHA256 cff861eb1135ad8acf84e1c0b9e23b21465532ed6fa26fb0a535791f945c0863 SHA512 8e2e90cb6fa1e7b1c98e14309a5758f3b470ca414b39ca33e777d8683474d691737c2bc37bda4f7e51b6b8c9c4f518413e469ee0549280e5d1d4b1a70dcdc487 WHIRLPOOL f7f8a14acdab620b2cd4d16488056c3e0c2574700406993393cebf7a48c970f0ab7f175752d88d8d3401a0d420514cc02cf8b76ae63db41a0cd0996c17cdb188
+AUX x2-1.1.0-Makefile.patch 494 SHA256 b9d2cd896eda387885f7f543f086a94c5dcf2a44076cb12cc3226b19b261cde8 SHA512 a4b7371c4f3673783776e093672612b7d5c226c8e02b5fdba3bf7eca0967e627c603917a0f9d8ccf0bb7b091d92899a3bcdd75fbc4c1817dc36ada501e3db566 WHIRLPOOL c0aeaca60b43663e5f8f5db28c53d839c6c380f52bc29a39d9f769b5026c1ffead852698b8c9a8ca67629c20571472b73618bcc94ebcdceb016ea2aabeef88d6
 AUX x2-1.1.0-desktop.patch 453 SHA256 1d5e6480a2ca413d0bb7c240fd700005e9e69526ad5f24b4211be504d0a80091 SHA512 c58de6067d5875101116ed8b10a6e943d49f458feb5ce0ba0c3886d11d87e7e1e14180dda144498e05506ac1658d59bb76c80f12eaccc5a3308849c07c6e7976 WHIRLPOOL c23a367207844a35c1cca174493f8dfcf25d622acead0accffa90565c937bc6d06101088ae76dce45915265f6ea75fb20d61bcce2589c37ffca5e24961c8b9a5
 DIST 145463-x2-1.1.0.tar.gz 72708 SHA256 6b231e64996df04f64d0a51b595c753e07e38fd4cc8b3a043abad0e773d67b4a SHA512 7a601e222062d0ff381cb09854f07798789d5e1a4e95b4029037965aca6e4a68f171906bcf307889a91e45906f577443d224908a53f2d9b026c92703dea06561 WHIRLPOOL f6d03ba5248e348d252a1abb8ce3cecffadf9158817cb18af0400e3440080682e7eb27cbacba7cc12f8884832b24521af533441ab55f520e6a31f027e87934c0
-EBUILD x2-1.1.0.ebuild 617 SHA256 a7f52ca6819f6fa2497bafd6eb880913ef137c8a9bee347e5e9cd44a977d43b4 SHA512 09d4e7d1e7f2968afaaede62424a166af48c4d73a998271a3c1a82d7b462706669cd3ab7e300d47afd26bda77bacb0c7b1266770870c1230ab35aa58c4a3fe75 WHIRLPOOL 25a223ac36be498b74ce20ac1db7972fdaf0fa7cfe3f6a8f95b95116f4f3412e2cecc81b115d809870fd396769c814ff81e284a199a9bb2a2b9fcd08cf53d8ec
-MISC ChangeLog 225 SHA256 d1557dcfe16680342782ffbca914a70f83603f15bd623d236aea85bf4dea8105 SHA512 5372c6832f7878af0f62cd26a81a406a3d94655e25084751f29b7550505ec55ea7143607a0920c0d33b99da921d0727b901220d9a7364ade38c654ebe763fdf6 WHIRLPOOL 5ebed261a8741d03d5b75f5927c15a8d072352853b3ffbbba96a7cc2bc177cd235523e1dd52f9423b7f77d33e34acea632aecedd642f541b13007c06f1e8c053
+EBUILD x2-1.1.0.ebuild 616 SHA256 00c139e1dbafb5171b41b851f4308e96d0ff74903d8b15c59163dece83867681 SHA512 67a331475ba1b6d1e0cc5a7d6704edba71df787b9b3d0204dd657449aada75bae2162402e5546052d2e36f6b42c8037d1e6eb5563ef6fbce59ba7bc4bea3a27f WHIRLPOOL cc06852dc85a9c31bc3de0eaf26b9fdc21c2d3d6068bd0e2b69b196f85214541f7c725cb35800d63a91ed6a4278524f05e93dd3b88757cbc83a9e712b0e0cd92
+MISC ChangeLog 358 SHA256 1faf4816e704aaafd5e97b6e1a99b27ae0b796ab6d372cf7af615b13c7ececdb SHA512 489825b088f83bf584f2f1adf02b7de87cfb6e1045b83db341382aa27d623f311df44001f4d4db05974dc6614a7416799b4ddae788017680562de2b4d8e24f04 WHIRLPOOL c3e96e02f5c6b448626b77cf0b890a44910140e0e02a3b812d52535b3f4c0ff48704203aa28ff167feea1f5611073b57404f7ddf49832f8987c20361779eb4bd
 MISC metadata.xml 237 SHA256 7aebf1a287d9d2d4fa5b66af4c801da2083b6bc7d3cd077c235869ade1fb960d SHA512 e9249ef4ab11f8463a54b559634717a35dcd23da7e4d233feb223f3db7847e0638a5a3c89fb23a05c567251dde2e796c2ce3cd1efd57ff1a513c6fe55f9978a8 WHIRLPOOL 01e3ce0b931af3ce0389559235d360f5278067cb93376de4bf06a4e640fe54619595ebde1b8c811b64cb2a3aeab2b61ed54052f6e33de9470342c4cd27ddd443
